# model-timescales

./: README.md  environment.yml  pyproject.toml
examples/: black_hole_versus_pl.ipynb  compare_timescales.ipynb  rose_23_reproduce.ipynb
src/timescales/: __init__.py  api.py  data.py  factory.py  factoryimf.py  sampling.py
src/timescales/analysis/: __init__.py  blackhole.py  integrals.py  model.py  modelv2.py  recipes.py  tables.py  time_evolution.py  tools.py
src/timescales/cosmodata/: __init__.py  numGreaterThanM_s8_08new.txt  numGreaterThanM_s8_17new.txt
src/timescales/imf/: __init__.py  base.py  kroupa.py  registry.py  salpeter.py  topheavy.py
src/timescales/physics/: __init__.py  blackhole.py  collisions.py  coulomb.py  dynamical_friction.py  gas.py  halo_environment.py  registry.py  relaxation.py  stars.py
src/timescales/profiles/: __init__.py  base.py  power_law.py  power_law_BH.py
src/timescales/utils/: __init__.py  energy.py  filtering.py  units.py
